usercrud/conf/k8s/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-kuber
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: kuber-app
          image: usercrud:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 80
