usercrud/conf/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    env: prod
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: LoadBalancer
